--- a/app/src/main/res/values-xh/strings.xml
+++ b/app/src/main/res/values-xh/strings.xml
@@ -94,6 +94,7 @@
         <string name="new_note_notification_title">Inothi Elisha Lengeziwe</string>
         <string name="new_note_notification_body">Inothi elisha selidaliwe ngempumelelo.</string>
       <string name="notification_channel_name">i-Notemaster</string>
+      <string name="notification_channel_description">kukhona inote entsha</string>
 
         <!-- Notification Channel Strings -->
 
